update annotate